Removed JMagick native library, and added missing classpath entry for JAI component.

--- a/build.properties
+++ b/build.properties
@@ -7,11 +7,11 @@
 # Type "ant -p" for a list of targets.
 
 component.jar            = jai_imageio.jar
-component.classpath      =
+component.classpath      = ${lib.dir}/clibwrapper_jiio.jar
 component.java-version   = 1.4
 
 component.resources-bin  = (none)
 component.resources-text = (none)
 
 component.manifest-main  = (none)
-component.manifest-cp    =
+component.manifest-cp    = ${lib.dir}/clibwrapper_jiio.jar
