Add sanity test that compares scanned dependencies with each component's build.properties classpath entries.

--- a/build.properties
+++ b/build.properties
@@ -14,4 +14,4 @@ component.resources-bin  = (none)
 component.resources-text = (none)
 
 component.manifest-main  = (none)
-component.manifest-cp    = ${lib.dir}/clibwrapper_jiio.jar
+component.manifest-cp    = clibwrapper_jiio.jar
