--- a/build.properties
+++ b/build.properties
@@ -13,5 +13,5 @@ component.java-version   = 1.4
 component.resources-bin  = (none)
 component.resources-text = (none)
 
-component.manifest-main  = (none)
-component.manifest-cp    = clibwrapper_jiio.jar
+component.main-class     = (none)
+component.runtime-cp     = ${component.classpath}
