--- a/build.properties
+++ b/build.properties
@@ -9,6 +9,7 @@
 component.jar            = jai_imageio.jar
 component.classpath      = ${lib.dir}/clibwrapper_jiio.jar
 component.java-version   = 1.4
+component.deprecation    = false
 
 component.resources-bin  = (none)
 component.resources-text = (none)
