--- a/build.properties
+++ b/build.properties
@@ -11,8 +11,8 @@ component.classpath      = ${lib.dir}/clibwrapper_jiio.jar
 component.java-version   = 1.4
 component.deprecation    = false
 
-component.resources-bin  = (none)
-component.resources-text = (none)
+component.resources-bin  =
+component.resources-text =
 
-component.main-class     = (none)
+component.main-class     =
 component.runtime-cp     = ${component.classpath}
