--- a/build.properties
+++ b/build.properties
@@ -6,7 +6,9 @@
 # Download Apache Ant from http://ant.apache.org/.
 # Type "ant -p" for a list of targets.
 
+component.name           = jai_imageio
 component.jar            = jai_imageio.jar
+component.version        = 1.0.0
 component.classpath      = ${lib.dir}/clibwrapper_jiio.jar
 component.java-version   = 1.4
 component.deprecation    = false
