--- a/build.properties
+++ b/build.properties
@@ -14,7 +14,7 @@ component.java-version   = 1.4
 component.deprecation    = false
 
 component.resources-bin  =
-component.resources-text =
+component.resources-text = **/properties
 
 component.main-class     =
 component.runtime-cp     = ${component.classpath}
