--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 
   <licenses>
     <license>
-      <name>BSD</name>
-      <url>http://dev.loci.wisc.edu/svn/java/trunk/forks/jai/LICENSE.txt</url>
+      <name>Simplified BSD License</name>
+      <url>${license.server}/jai_imageio/license.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
