--- a/build.properties
+++ b/build.properties
@@ -9,7 +9,7 @@
 component.name           = jai_imageio
 component.jar            = jai_imageio.jar
 component.version        = 1.0.0
-component.classpath      = ${lib.dir}/clibwrapper_jiio.jar
+component.classpath      =
 component.java-version   = 1.4
 component.deprecation    = false
 
