--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,9 @@
     http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>loci</groupId>
-    <artifactId>pom-scifio</artifactId>
-    <version>4.5-SNAPSHOT</version>
-    <relativePath>../../..</relativePath>
-  </parent>
-
+  <groupId>io.scif</groupId>
   <artifactId>jai_imageio</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
 
   <name>JAI Image I/O Tools</name>
   <description>Java API to handle JPEG and JPEG2000 files. Used by Bio-Formats to read images compressed with JPEG2000 and lossless JPEG. Modified from the 2008-10-14 source to include support for the YCbCr color space. Several files in the com.sun.media.jai packages were removed, as they are not needed by Bio-Formats, and created an additional dependency. This component will be removed once our changes have been added to the official JAI CVS repository.</description>
@@ -27,7 +22,7 @@
   </licenses>
 
   <properties>
-    <project.rootdir>${basedir}/../../..</project.rootdir>
+    <project.rootdir>${basedir}</project.rootdir>
   </properties>
 
   <build>
