--- a/pom.xml
+++ b/pom.xml
@@ -21,23 +21,51 @@
     </license>
   </licenses>
 
-  <properties>
-    <project.rootdir>${basedir}</project.rootdir>
-  </properties>
-
   <build>
+   <defaultGoal>install</defaultGoal>
+   <resources>
+      <resource>
+        <directory>${project.basedir}/src/main/java</directory>
+        <excludes>
+          <exclude>**/*.java</exclude>
+          <exclude>**/package.html</exclude>
+        </excludes>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>license-maven-plugin</artifactId>
-        <version>1.5</version>
+        <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <licenseName>jai_imageio</licenseName>
-          <projectName>Fork of JAI Image I/O Tools.</projectName>
+          <source>1.5</source>
+          <target>1.5</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-source-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+       </plugin>
+    </plugins>
+
+  </build>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <javadocDirectory>${project.basedir}/src/main/java</javadocDirectory>
         </configuration>
       </plugin>
     </plugins>
-  </build>
+  </reporting>
+
+  <organization>
+    <name>Open Microscopy Environment</name>
+    <url>http://www.openmicroscopy.org/</url>
+  </organization>
 
   <developers>
     <developer>
