--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <version>1.0.0-SNAPSHOT</version>
 
   <name>JAI Image I/O Tools</name>
-  <description>Java API to handle JPEG and JPEG2000 files. Used by Bio-Formats to read images compressed with JPEG2000 and lossless JPEG. Modified from the 2008-10-14 source to include support for the YCbCr color space. Several files in the com.sun.media.jai packages were removed, as they are not needed by Bio-Formats, and created an additional dependency. This component will be removed once our changes have been added to the official JAI CVS repository.</description>
+  <description>Java API to handle JPEG and JPEG2000 files. Used by Bio-Formats to read images compressed with JPEG2000 and lossless JPEG. Modified from the 2008-10-14 source to include support for the YCbCr color space. Several files in the com.sun.media.jai packages were removed, as they are not needed by Bio-Formats, and created an additional dependency. This project can be removed once our changes have been added to the official JAI CVS repository.</description>
   <url>http://jai-imageio.dev.java.net/</url>
   <inceptionYear>2008</inceptionYear>
 
