Update scm metadata

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
     </developer>
   </developers>
 
+  <scm>
+		<connection>scm:git:git://github.com/scifio/scifio-jai-imageio-core</connection>
+		<developerConnection>scm:git:git@github.com:scifio/scifio-jai-imageio-core</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/scifio/scifio-jai-imageio-core</url>
+  </scm>
+
   <!-- NB: for project parent, in case of partial checkout -->
   <repositories>
     <repository>
