--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,12 @@
     http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>org.scijava</groupId>
+    <artifactId>pom-scijava</artifactId>
+    <version>1.48</version>
+  </parent>
+
   <groupId>io.scif</groupId>
   <artifactId>jai_imageio</artifactId>
   <version>1.0.0-SNAPSHOT</version>
@@ -22,16 +28,6 @@
   </licenses>
 
   <build>
-   <defaultGoal>install</defaultGoal>
-   <resources>
-      <resource>
-        <directory>${project.basedir}/src/main/java</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-          <exclude>**/package.html</exclude>
-        </excludes>
-      </resource>
-    </resources>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -50,17 +46,6 @@
     </plugins>
 
   </build>
-
-  <reporting>
-    <plugins>
-      <plugin>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <javadocDirectory>${project.basedir}/src/main/java</javadocDirectory>
-        </configuration>
-      </plugin>
-    </plugins>
-  </reporting>
 
   <organization>
     <name>Open Microscopy Environment</name>
