--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
     </license>
   </licenses>
 
+  <properties>
+    <project.rootdir>${basedir}</project.rootdir>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
@@ -42,7 +46,23 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>buildnumber-maven-plugin</artifactId>
-       </plugin>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <configuration>
+          <licenseName>scifio</licenseName>
+          <licenseResolver>file://${project.rootdir}/license</licenseResolver>
+          <projectName>SCIFIO fork of the Java Advanced Imaging Image I/O Tools API Core.</projectName>
+          <organizationName>Open Microscopy Environment:
+  - Board of Regents of the University of Wisconsin-Madison
+  - Glencoe Software, Inc.
+  - University of Dundee</organizationName>
+          <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
+          <canUpdateDescription>true</canUpdateDescription>
+          <canUpdateCopyright>true</canUpdateCopyright>
+        </configuration>
+      </plugin>
     </plugins>
 
   </build>
