POM: use new bsd_2 license, not custom resolver
The license-maven-plugin 1.6 adds BSD-style license templates:
  https://jira.codehaus.org/browse/MLICENSE-80

With this fabulous new addition, we can eliminate our custom
license resolver in favor of the stock bsd_2 license.

--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,6 @@
     </license>
   </licenses>
 
-  <properties>
-    <project.rootdir>${basedir}</project.rootdir>
-  </properties>
-
   <build>
     <plugins>
       <plugin>
@@ -42,8 +38,7 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>license-maven-plugin</artifactId>
         <configuration>
-          <licenseName>scifio</licenseName>
-          <licenseResolver>file://${project.rootdir}/license</licenseResolver>
+          <licenseName>bsd_2</licenseName>
           <projectName>SCIFIO fork of the Java Advanced Imaging Image I/O Tools API Core.</projectName>
           <organizationName>Open Microscopy Environment:
   - Board of Regents of the University of Wisconsin-Madison
