--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<groupId>io.scif</groupId>
-	<artifactId>jai_imageio</artifactId>
+	<artifactId>scifio-jai-imageio</artifactId>
 	<version>1.0.2-SNAPSHOT</version>
 
 	<name>JAI Image I/O Tools</name>
