--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,14 @@
 		<tag>HEAD</tag>
 		<url>https://github.com/scifio/scifio-jai-imageio</url>
 	</scm>
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/scifio/scifio-jai-imageio/issues</url>
+	</issueManagement>
+	<ciManagement>
+		<system>Jenkins</system>
+		<url>http://jenkins.imagej.net/job/SCIFIO-JAI-ImageIO/</url>
+	</ciManagement>
 
 	<repositories>
 		<repository>
