Disable strict Java 8 doclint checks
This project is intended to be a minimal fork; we can't
justify the time to clean up all the javadoc errors.

--- a/pom.xml
+++ b/pom.xml
@@ -114,4 +114,17 @@
 	- University of Dundee</license.copyrightOwners>
 		<license.projectName>SCIFIO fork of the Java Advanced Imaging Image I/O Tools API Core.</license.projectName>
 	</properties>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<!-- NB: Disable the strict Java 8 doclint. -->
+					<additionalparam>-Xdoclint:none</additionalparam>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
