POM: use HTTPS for imagej.net URLs

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<developer>
 			<id>ctrueden</id>
 			<name>Curtis Rueden</name>
-			<url>http://imagej.net/User:Rueden</url>
+			<url>https://imagej.net/User:Rueden</url>
 			<roles>
 				<role>founder</role>
 				<role>lead</role>
@@ -44,13 +44,13 @@
 	<contributors>
 		<contributor>
 			<name>Melissa Linkert</name>
-			<url>http://imagej.net/User:Linkert</url>
+			<url>https://imagej.net/User:Linkert</url>
 			<roles><role>founder</role></roles>
 			<properties><id>melissalinkert</id></properties>
 		</contributor>
 		<contributor>
 			<name>Mark Hiner</name>
-			<url>http://imagej.net/User:Hinerm</url>
+			<url>https://imagej.net/User:Hinerm</url>
 			<roles><role>founder</role></roles>
 			<properties><id>hinerm</id></properties>
 		</contributor>
@@ -63,12 +63,12 @@
 		</contributor>
 		<contributor>
 			<name>Sebastien Besson</name>
-			<url>http://imagej.net/User:Sbesson</url>
+			<url>https://imagej.net/User:Sbesson</url>
 			<properties><id>sbesson</id></properties>
 		</contributor>
 		<contributor>
 			<name>Josh Moore</name>
-			<url>http://imagej.net/User:Moore</url>
+			<url>https://imagej.net/User:Moore</url>
 			<properties><id>joshmoore</id></properties>
 		</contributor>
 		<contributor>
@@ -77,7 +77,7 @@
 		</contributor>
 		<contributor>
 			<name>Johannes Schindelin</name>
-			<url>http://imagej.net/User:Schindelin</url>
+			<url>https://imagej.net/User:Schindelin</url>
 			<properties><id>dscho</id></properties>
 		</contributor>
 	</contributors>
