--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 	</mailingLists>
 
 	<scm>
-		<connection>scm:git:git://github.com/scifio/scifio-jai-imageio</connection>
+		<connection>scm:git:https://github.com/scifio/scifio-jai-imageio</connection>
 		<developerConnection>scm:git:git@github.com:scifio/scifio-jai-imageio</developerConnection>
 		<tag>HEAD</tag>
 		<url>https://github.com/scifio/scifio-jai-imageio</url>
